--- a/package.json
+++ b/package.json
@@ -5,18 +5,31 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "classnames": "^2.2.6",
+    "framer-motion": "^2.9.4",
     "gatsby": "^2.24.79",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-offline": "^3.2.33",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sass": "^2.3.19",
     "gatsby-plugin-sharp": "^2.6.42",
+    "gatsby-plugin-transition-link": "^1.20.5",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.3.34",
     "gatsby-transformer-sharp": "^2.5.17",
+    "gsap": "^3.5.1",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.29.1",
+    "react-keyboard-event-handler": "^1.5.4",
+    "react-three-fiber": "^5.1.4",
+    "react-transition-group": "^4.4.1",
+    "three": "^0.122.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
