--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@react-three/drei": "^2.2.3",
+    "@react-three/postprocessing": "^1.4.1",
+    "beautiful-react-hooks": "^0.31.0",
     "classnames": "^2.2.6",
     "framer-motion": "^2.9.4",
-    "gatsby": "^2.24.79",
+    "gatsby": "^2.25.2",
+    "gatsby-background-image": "^1.2.0",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-offline": "^3.2.33",
+    "gatsby-plugin-preconnect": "^1.1.54",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.19",
     "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-plugin-transition-link": "^1.20.5",
@@ -23,15 +29,19 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^6.11.0",
     "react-intersection-observer": "^8.29.1",
     "react-keyboard-event-handler": "^1.5.4",
     "react-three-fiber": "^5.1.4",
-    "react-transition-group": "^4.4.1",
     "three": "^0.122.0"
   },
   "devDependencies": {
+    "http-proxy-middleware": "^1.0.6",
+    "netlify-lambda": "^2.0.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.1.2"
   },
   "keywords": [
@@ -39,10 +49,14 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build && netlify-lambda build src/lambda",
+    "build:app": "gatsby build",
+    "build:lambda": "netlify-lambda build src/lambda",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "run-p start:**",
+    "start:app": "npm run develop",
+    "start:lambda": "netlify-lambda serve src/lambda",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
