--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@react-three/postprocessing": "^1.4.1",
     "beautiful-react-hooks": "^0.31.0",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "framer-motion": "^2.9.4",
     "gatsby": "^2.25.2",
     "gatsby-background-image": "^1.2.0",
@@ -26,6 +27,7 @@
     "gatsby-source-filesystem": "^2.3.34",
     "gatsby-transformer-sharp": "^2.5.17",
     "gsap": "^3.5.1",
+    "mailgun-js": "^0.22.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
