--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@react-three/drei": "^2.2.3",
     "@react-three/postprocessing": "^1.4.1",
+    "axios": "^0.21.0",
     "beautiful-react-hooks": "^0.31.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
