--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-countup": "^4.3.3",
+    "react-div-100vh": "^0.5.6",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.11.0",
