--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "@react-three/postprocessing": "^1.4.1",
     "axios": "^0.21.0",
     "beautiful-react-hooks": "^0.31.0",
-    "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.9.4",
     "gatsby": "^2.25.2",
-    "gatsby-background-image": "^1.2.0",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-offline": "^3.2.33",
@@ -27,19 +25,18 @@
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^2.3.34",
     "gatsby-transformer-sharp": "^2.5.17",
-    "grained": "0.0.2",
     "gsap": "^3.5.1",
     "mailgun-js": "^0.22.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-countup": "^4.3.3",
+    "react-device-detect": "^1.14.0",
     "react-div-100vh": "^0.5.6",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.11.0",
     "react-intersection-observer": "^8.29.1",
-    "react-keyboard-event-handler": "^1.5.4",
     "react-three-fiber": "^5.1.4",
     "three": "^0.122.0"
   },
